# dd-trace-py

./: .gitlab-ci.yml  docker-compose.yml  hatch.toml  pyproject.toml  riotfile.py
.circleci/: config.templ.yml
.github/workflows/: system-tests.yml
.gitlab/: benchmarks.yml  download-wheels-from-gh-actions.sh  macrobenchmarks.yml  prepare-oci-package.sh  quality-gates-tests.yml  static-analysis.yml  system-tests.yml  testrunner.yml  tests.yml
.gitlab/tests/: contrib.yml
.riot/requirements/: 114a074.txt  14a1a39.txt  168a443.txt  1aa3044.txt  1cd0746.txt  69997b1.txt  7c104f7.txt  8dea090.txt  988d16f.txt  9b3b6c2.txt  a8351f1.txt  b1fd8ec.txt  c3e8b1a.txt  e20bbeb.txt  f19daa4.txt
ddtrace/: __init__.py  _monkey.py
ddtrace/appsec/: _handlers.py
ddtrace/appsec/_iast/: _patch_modules.py
ddtrace/appsec/_iast/taint_sinks/: header_injection.py
ddtrace/contrib/django/: patch.py
ddtrace/internal/: module.py  tracemethods.py  uwsgi.py
ddtrace/internal/bytecode_injection/: core.py
ddtrace/internal/core/: __init__.py  event_hub.py  import_hooks.py
ddtrace/internal/telemetry/: writer.py
ddtrace/profiling/collector/: _task.pyx
docker/: Dockerfile
scripts/: ddtest  gen_circleci_config.py  run-test-suite
src/core/: Cargo.toml  lib.rs  remote_config.rs
tests/: utils.py
tests/contrib/: config.py
tests/contrib/dramatiq/: test_integration.py
tests/contrib/elasticsearch/: conftest.py  test_async.py  test_elasticsearch.py  test_opensearch.py
tests/llmobs/: conftest.py
tests/profiling/: test_uwsgi.py
